[+] Tooltip over tray icon.
[+] Current Download/Upload speed in window title.
[+] Short "Torrents view" and "Torrent peers view" columns names.
[+] Treeview's headers and some settings window options tooltips.
[+] Updated boost configure macros.
[+] Automatic torrents removing by share ratio.
[+] Automatic torrents loading from specified directory.
[+] Libtorrent 0.14.3 (for bundle version).
[-] Removed debian directory. Packages are now available at the launchpad.net.
[*] If directory, setted in the Settings window, already is not exists,
Settings window will show user warning message instead of silently changing
directory to parent directory, as it was in previous version.


0.4.1 (2009.04.01)
[*] Fixed bug which caused program terminating on x86-64 architectures with
following output:
	terminate called after throwing an instance of 'libconfig::SettingTypeException' 
	what(): SettingTypeException 
	Aborted
[*] Fixed compatibility bug, due to which program compilation fails under
glibmm-2.16.
[*] Fixed compatibility bug, due to which program compilation fails under
boost >= 1.35.
[*] Fixed small bug in torrent options tab: "Copy when finished to"
CheckButton was not updated when it was toggled at that time, when it can't be
toggled (when "Copy when finished to" Gtk::Entry is empty).


0.4 (2009.03.23)
-----
[+] Torrent creating feature.
[+] Torrent renaming in add torrent dialog.
[+] Torrent options tab (setting sequential download, setting directory for
finished torrent files copying and editing torrent trackers list).
[+] Restoring DHT state from previous session.
[+] Added man pages (en, ru).
[+] Now source package is building in two versions: ordinary and bundle.
Bundle version include libconfig and libtorrent-rasterbar libraries that makes
building binary package more simple if this libraries is not exists in user
distributive.
[+] Some other small enhancements.
[*] Small bugs fixes.
[*] configure.ac fixes for supporting custom boost libraries.

