@@ -23,9 +23,11 @@
 #include <gtkmm/entry.h>
 #include <gtkmm/filechooserdialog.h>
 #include <gtkmm/frame.h>
+#include <gtkmm/separator.h>
 #include <gtkmm/stock.h>
 
 #include <mlib/gtk/misc.hpp>
+#include <mlib/gtk/vbox.hpp>
 
 #include "daemon_proxy.hpp"
 #include "main.hpp"
@@ -62,12 +64,15 @@ Torrent_options_view::Torrent_options_view(void)
 
 	// Скачивание -->
 	{
-		Gtk::Frame* frame = Gtk::manage( new Gtk::Frame(_("Downloading")) );
-		main_hbox->pack_start(*frame, false, false);
+		//Gtk::Frame* frame = Gtk::manage( new Gtk::Frame(_("Downloading")) );
+		//main_hbox->pack_start(*frame, false, false);
 
 		Gtk::VBox* vbox = Gtk::manage(new Gtk::VBox(false, m::gtk::VBOX_SPACING));
 		vbox->set_border_width(m::gtk::BOX_BORDER_WIDTH);
-		frame->add(*vbox);
+		main_hbox->pack_start(*vbox, false, false);
+		//frame->add(*vbox);
+
+		m::gtk::vbox::add_header(*vbox, _("Downloading"));
 
 		// Sequential download -->
 			this->gui->sequential_download_check_button.set_label(_("Sequential download"));
@@ -104,12 +109,21 @@ Torrent_options_view::Torrent_options_view(void)
 	}
 	// Скачивание <--
 
+main_hbox->pack_start(*Gtk::manage(new Gtk::VSeparator), false, false);
 	// Трекеры -->
 	{
-		Gtk::Frame* frame = Gtk::manage( new Gtk::Frame(_("Trackers")) );
-		main_hbox->pack_start(*frame, true, true);
+		//Gtk::Frame* frame = Gtk::manage( new Gtk::Frame(_("Trackers")) );
+		//main_hbox->pack_start(*frame, true, true);
 
-		frame->add(this->gui->trackers_view);
+		Gtk::VBox* vbox = Gtk::manage(new Gtk::VBox(false, m::gtk::VBOX_SPACING));
+		vbox->set_border_width(m::gtk::BOX_BORDER_WIDTH);
+		main_hbox->pack_start(*vbox, true, true);
+		//frame->add(*vbox);
+
+		m::gtk::vbox::add_header(*vbox, _("Trackers"));
+
+		vbox->pack_start(this->gui->trackers_view, true, true);
+		//frame->add(this->gui->trackers_view);
 	}
 	// Трекеры <--
 
