@@ -99,7 +99,7 @@ Trackers_view::Trackers_view(void)
 	Gtk::Button* button;
 
 	Gtk::Table* table = Gtk::manage(new Gtk::Table(2, 2));
-	table->set_border_width(m::gtk::BOX_BORDER_WIDTH);
+//	table->set_border_width(m::gtk::BOX_BORDER_WIDTH);
 	table->set_row_spacings(m::gtk::HBOX_SPACING);
 	table->set_col_spacings(m::gtk::HBOX_SPACING);
 	this->pack_start(*table, true, true);
