@@ -8,6 +8,9 @@
 [+] Automatic torrents removing by share ratio.
 [+] Automatic torrents loading from specified directory.
 [+] Libtorrent 0.14.3 (for bundle version).
+[+] "Hide main window to tray at startup", "Minimize to tray" and "Close to
+tray" settings.
+[+] Some small GUI enhancements.
 [-] Removed debian directory. Packages are now available at the launchpad.net.
 [*] If directory, setted in the Settings window, already is not exists,
 Settings window will show user warning message instead of silently changing
